# kociemba

./: .gitignore  Cargo.toml  README.md
benches/: bench_solver.rs
cli/: Cargo.toml
cli/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: coord.rs  cubie.rs  error.rs  facelet.rs  lib.rs  main.rs  main1.rs  moves.rs  pruning.rs  scramble.rs  solver.rs  symmetries.rs
web/: Cargo.toml  index.html  styles.css
web/src/: cubie.rs  main.rs
