[package]
name = "kociemba-cli"
version = "0.5.2"
edition = "2021"
description = "solving the 3x3 Rubik's cube with Kociemba's two phase algorithm"
authors = [
  "Adun Gaos <adungaos@gmail.com>",
]
repository = "https://github.com/adungaos/kociema"
license = "MIT"
readme = "../README.md"

[dependencies]
kociemba = {path = "../"}
crossterm = "0.27.0"
clap = { version = "4.5.4", features = ["derive"] } 
spinners = "4.1.1"