[package]
name = "kociemba-server"
version = "0.5.2"
edition = "2021"
description = "http server for solving the 3x3 Rubik's cube with Kociemba's two phase algorithm"
authors = [
  "Adun Gaos <adungaos@gmail.com>",
]
repository = "https://github.com/adungaos/kociema"
license = "MIT"
readme = "../README.md"

[dependencies]
kociemba = {path = "../"}
axum =  "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
