[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
kociemba = { path = "../" }
yew = { version = "0.21", features = ["csr"] }
gloo = "0.8.0"
rand = "0.8.5"
gloo-console = "0.3.0"
log = "0.4.17"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
ehttp = { version = "0.5.0", features = ["json"] }
serde_json = "1.0.117"
