[package]
name = "kociemba-web"
version = "0.5.2"
edition = "2021"
description = "Web GUI for solving the 3x3 Rubik's cube with Kociemba's two phase algorithm"
authors = [
  "Adun Gaos <adungaos@gmail.com>",
]
repository = "https://github.com/adungaos/kociema"
license = "MIT"
readme = "../README.md"

[dependencies]
kociemba = { path = "../" }
yew = { version = "0.21", features = ["csr"] }
gloo = "0.8.0"
gloo-console = "0.3.0"
log = "0.4.17"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-logger = "0.2"
ehttp = { version = "0.5.0", features = ["json"] }
serde_json = "1.0.117"
